version 1.1-1
- fixed bug in comparison tableplot

version 1.1
- improved sampling (now very fast for large datasets!). Arguments sample and sampleBinSize are added.
- added comparison tableplots (see ?"-.tabplot")

version 1.0-1
- fixed bug when nBins > number of rows

version 1.0
- fast preprocessing with ffbase, which uses C code
- tick marks applied on x-ases for numeric variables 
- flexilibity to plot high cardinality categorical variables
- fixed a bug: if nBins was an integer the tableplot function reported that it was not numeric (thanks to Gabor Grothendieck).
- updated vignette
- added shiny interface 

version 0.12-1
- fixed bug with one-level-factors

version 0.12
- added more flexibility to select columns and to subset the data. The new argument select allows both column indices and expressions while the new argument select_string allows character strings. The new argument subset allows logical expressions to indicate which rows to select, while subset_string allows character strings. The subset(_string) can also be used to select a categorical variable to split the data.
- vignette rewritten (with knitr)
- updated preprocessing (using data.table), which allows to create tableplots of larger datasets in memory. (The ffdf format is still needed for datasets that don't fit into memory.)
- added argument nCol, which sets the maximum number of columns. Now it is possible to automatically generate easy to read tableplots for all columns in the dataset.
- fixed small ffdf bug
- fixed bug with large fontsizes
- added argument fontsize.title

version 0.11-2
- tableSave: added svg output
- fixed ffdf bug introduced since R2.15