@@ -1,5 +1,6 @@
 version 1.1-1
 - fixed bug in comparison tableplot
+- fixed bug with sortCol. sortCol can now be a character, index number, or an expression
 
 version 1.1
 - improved sampling (now very fast for large datasets!). Arguments sample and sampleBinSize are added.
